gh-304: Update to Swagger 0.7.4
